still some issues with aligning with the edges of the time cells and the index count is strange

--- a/client/src/styles/DragDropTest.css
+++ b/client/src/styles/DragDropTest.css
@@ -5,15 +5,6 @@
 
 }
 
-.day-col {
-  border: solid 1px #000000;
-  height: 50vh;
-  width: 20vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .time-labels {
     height: 100%;
   overflow: scroll;
@@ -54,21 +45,31 @@
 
 .day-column {
     position: relative;
-    width: 200px;
+    width: 30vw;
+    height: 50vw;
     border: 1px solid #ccc;
     margin: 10px;
 }
 
 .day-grid {
     position: relative;
-    height: 1440px; /* 10px * 144 intervals */
+    height: 80%;
+    overflow: scroll;
     background: #f9f9f9;
 }
 
+.time-cell p {
+    text-align: start;
+    padding-left: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 .time-cell {
-    height: 10px;
+    height: 20px;
     font-size: 10px;
     border-bottom: 1px solid #eee;
+    box-sizing: border-box; /* Important! */
 }
 
 .event-block {
